2005-07-31  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-render.c

	* app/display/gimpdisplayshell.[ch]: removed the overlay again.
	This needs to be done differently.

	* app/tools/gimpforegroundselecttool.c: changed accordingly.

2005-07-30  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-render.c
	* app/display/gimpdisplayshell.[ch]: renamed overlay to mask and
	added a different overlay implementation that will be needed to
	finish the new foreground-select tool.

	* app/tools/gimpforegroundselecttool.c: changed accordingly.

2005-07-30  Sven Neumann  <sven@gimp.org>

	* app/tools/gimptoolcontrol.[ch]: transparently handle cursor
	vs. toggle cursor in the cursor accessor functions.

	* app/tools/gimpconvolvetool.c
	* app/tools/gimperasertool.c
	* app/tools/gimpmagnifytool.c
	* app/tools/gimptool.c: simplifies things here.

	* app/tools/gimpforegroundselecttool.c: set a toggle cursor and
	toggle the tool if a mask is set.

2005-07-30  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpforegroundselecttool.c: implement cursor_update().
	Suppress standard selection tool functionality if a mask exists.

2005-07-30  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpforegroundselecttool.c: implement oper_update() and
	and give some hints in the statusbar.

2005-07-30  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-render.c
	* app/display/gimpdisplayshell.[ch]: added
	gimp_display_shell_set_overlay(); allows to overlay a mask over the
	display to visualize a selection.

	* app/tools/gimpforegroundselecttool.[ch]: use the new functionality
	to display the selection. Escape cancels the tool, Enter applies the
	selection.

2005-07-30  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpbase.def: added missing symbol.

2005-07-30  Sven Neumann  <sven@gimp.org>

	* app/base/gimphistogram.c (gimp_histogram_calculate_sub_region):
	loop unrolling.

	* app/dialogs/about-dialog.c 
	* app/widgets/gimpselectiondata.c