@@ -1,7 +1,10 @@
 2005-07-31  Sven Neumann  <sven@gimp.org>
 
-	* app/display/gimpdisplayshell-render.c
+	* app/core/gimpscanconvert.c: fixed some minor coding style issues.
 
+2005-07-31  Sven Neumann  <sven@gimp.org>
+
+	* app/display/gimpdisplayshell-render.c
 	* app/display/gimpdisplayshell.[ch]: removed the overlay again.
 	This needs to be done differently.
 
